--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 
-DB_URI=mongodb+srv://somendra:1234asas@cluster0.e7gnqa8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=mongodb+srv://@cluster0.e7gnqa8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiaGV4YSIsImlhdCI6MTc0ODcyNTE1MX0.ZUACNAwt-yKuHCbA6cf09uquPx06UUom6-Gxk6Dd05k
 PORT=5000
